--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "Siyang Kern Zhao <siyangkernzhao@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "axios": "^0.26.0",
+    "rxjs": "^7.5.4",
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
